objects/EXPRN__Selected_Model_Report__c.object
<CustomObject>
    <description>List of report types selected for a particular scoring model</description>
    <fields>
        <fullName>EXPRN__BIQ_Configuration__c</fullName>
        <description>Relation with BIQ Configuration</description>
        <label>BIQ Configuration</label>
        <referenceTo>EXPRN__BIQ_Configuration__c</referenceTo>
        <relationshipLabel>Selected Model Reports</relationshipLabel>
        <relationshipName>Selected_Model_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Product_Number__c</fullName>
        <description>Product number of the report type</description>
        <label>Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Product_Option__c</fullName>
        <description>Product options enabled for the report type selected</description>
        <label>Product Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scoring_Model__c</fullName>
        <description>Scoring Model that can be selected for a particular report type</description>
        <label>Scoring Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__isBlended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether report type is a blended one or not</description>
        <label>isBlended</label>
        <type>Checkbox</type>
    </fields>
    <label>Selected Model Report</label>
    <nameField>
        <label>Report Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selected Model Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>